[package]
name = "blockchain"
version = "0.1.0"
authors = ["levi"]

[dependencies]
sha2 = "*"
vm = { path = "core/rvm" }
blocks = { path = "blocks" }
transactions = { path = "core/transactions" }
db = { path = "db" }
consensus = { path = "consensus" }
utils = {path = "utils"}
chain = {path = "chain"}

[workspace]
members = [
	"core/transactions",
	"core/rvm",
	"blocks",
	"rustcoin",
	"db"
]

[[bin]]
path = "rustcoin/main.rs"
name = "rustcoind"
