[package]
name = "blockchain"
version = "0.1.0"
authors = ["levi"]

[dependencies]
sha2 = "*"
rkv = "*"
vm = { path = "core/rvm" }
blocks = { path = "blocks" }
transactions = { path = "core/transactions" }
consensus = { path = "consensus" }
utils = {path = "utils"}
chain = {path = "chain"}
openssl = "*"
wallet = {path = "wallet"}

[workspace]
members = [
	"core/transactions",
	"core/rvm",
	"blocks",
	"wallet",
	"rustcoin"
]

[[bin]]
path = "rustcoin/main.rs"
name = "rustcoind"
